# cc-log-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run-tests.sh
src/: lib.rs  main.rs  tool_renderer.rs  tui.rs
static/: index.html  live.html
tests/: basic_tests.rs  cli_tests.rs  end_to_end_tests.rs  tool_event_tests.rs  tui_tests.rs  watch_manager_tests.rs  websocket_tests.rs
