[package]
name = "cc-log-viewer"
version = "0.2.0"
edition = "2021"
authors = ["Harper <harper@2389.ai>"]
description = "A beautiful, feature-rich web interface for viewing and auditing Claude Code conversation logs"
license = "MIT"
repository = "https://github.com/2389-research/cc-log-viewer"
homepage = "https://github.com/2389-research/cc-log-viewer"
documentation = "https://github.com/2389-research/cc-log-viewer#readme"
keywords = ["claude", "code", "logs", "viewer", "web"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
readme = "README.md"
exclude = ["target/", ".git/", "*.log"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
uuid = { version = "1.0", features = ["serde"] }
