[package]
name = "cc-log-viewer"
version = "0.3.0"
edition = "2021"
authors = ["Harper <harper@2389.ai>"]
description = "A beautiful, feature-rich web interface for viewing and auditing Claude Code conversation logs"
license = "MIT"
repository = "https://github.com/2389-research/cc-log-viewer"
homepage = "https://github.com/2389-research/cc-log-viewer"
documentation = "https://github.com/2389-research/cc-log-viewer#readme"
keywords = ["claude", "code", "logs", "viewer", "web"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
readme = "README.md"
exclude = ["target/", ".git/", "*.log"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
uuid = { version = "1.0", features = ["serde"] }
notify = "6.0"
tokio-tungstenite = "0.20"
dashmap = "5.0"
tokio-stream = "0.1"
futures-util = "0.3"
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.0"
serde_json = "1.0"
axum-test = "15.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
